--- a/sass/layouts/_what-we-do-section.scss
+++ b/sass/layouts/_what-we-do-section.scss
@@ -17,7 +17,7 @@
 	position: relative;
 }
 
-.project-overlay {
+.projects__overlay {
 	display: flex;
 	justify-content: center;
 	align-items: center;
